--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Vue Accueil -->
         <div id="home" class="view active">
             <div class="hero-section">
-                <h1 class="hero-title">Bienvenue chez Boutique Verte !</h1>
+                <h1 class="hero-title">Bienvenue chez SAHAD STORE!</h1>
                 <p class="hero-subtitle">Découvrez nos produits écologiques et durables. Ajoutez-les à votre panier en un clic ou par glisser-déposer.</p>
                 <button class="cta-button" onclick="showView('products')">Explorer nos produits</button>
             </div>
