--- a/index.html
+++ b/index.html
@@ -122,5 +122,8 @@
 
     <script src="product.js"></script>
     <script src="javascript.js"></script>
+     <script src="footer.js">
+        // Affichage dynamique de l'année dans le footer 
+    </script>
 </body>
 </html>
