--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
         Produit ajouté au panier !
     </div>
 
-
+    <footer class="footer">
+                <span id="copyright"></span>
+    </footer>
     <script src="product.js"></script>
     <script src="javascript.js"></script>
      <script src="footer.js">
